Message describing the changes

--- a/pages/file_table.html
+++ b/pages/file_table.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DataTables with JSON from Text File</title>
+    <title>File Name Key Table</title>
     <!-- Include DataTables CSS -->
     <link href="https://cdn.datatables.net/v/dt/dt-2.0.5/datatables.min.css" rel="stylesheet">
 </head>
