Update file_table.html - default order by date new to old

--- a/pages/file_table.html
+++ b/pages/file_table.html
@@ -61,7 +61,8 @@
                             { data: 'timestamp' },
                             { data: 'IP' }
                         ],
-                        colReorder: true // Enable ColReorder
+                        colReorder: true, // Enable ColReorder
+                        order: [[3, 'desc']]
                     });
                 }
             });
